# GDrive_Uploader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  config.py  config_example.py  docker-compose.yaml  drive_service.py  gdrive_service.py  pyproject.toml  setup_and_run.sh  userbot.py
