[tool.poetry]
name = "telegram-drive-bot"
version = "0.1.0"
description = ""
authors = ["oCa"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "21.6"
google-auth = "2.35.0"
google-auth-oauthlib = "1.2.1"
google-api-python-client = "2.149.0"
oauth2client = "^3.0.0"
python-dotenv = "1.0.1"
aiohttp = "3.10.10"
asyncio = "3.4.1"
multidict= "5.2.0"
telebot = "0.0.5"
telethon = "1.35.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
